# spare

./: Cargo.toml  README.md
src/: lib.rs
src/deco/: mod.rs
src/deco/entries/: mod.rs
src/deco/matrix/: mod.rs
src/deco/vector/: joiners.rs  mod.rs
src/padder/: matrix.rs  mod.rs  util.rs  vector.rs
tests/: integration_test.rs
tests/alpha/: display_to_number_test.rs  mod.rs
